--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 							</header>
 							<ul class="actions stacked">
 								<li><a href="mailto:areebashoaib99@gmail.com" class="button fit primary">Email</a></li>
-								<li><a href="https://github.com/abb12345" class="button fit">GitHub</a></li>
+								<li><a href="https://github.com/bunny401" class="button fit">GitHub</a></li>
 							</ul>
 						</div>
 					</section>
@@ -365,7 +365,7 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/areeba709/"  class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 
-							<li><a href="https://github.com/abb12345"  class="icon brands fa-github"><span class="label">github</span></a></li>
+							<li><a href="https://github.com/bunny401"  class="icon brands fa-github"><span class="label">github</span></a></li>
 							<li><a href="mailto:areebashoaib99@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
