feat(index.html)updated content

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Areeba T. Shoaib</h2>
-							<p> TECHNOLOGY + QUANTUM COMPUTING ENTHUSIAST  <br />
-								ASPIRING PHYSICIST  <br />
+							<p> COMPUTER & NETWORK SECURITY ENTHUSIAST  <br />
+							
 								A CURIOUS GIRL <br />
 								A WANDERER
 							</p>
