Feat(imaged) Added images

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								<h2>Sign over the Wonder!<br /> And give up on the impossible.<br /> Then, who will I be? <br /></h2>
 								<p>
 									I am an Undergraduate student at Budapest University of Technology and Economics.<br /> I am working towards a Bachelors of Science degree in Computer Scinece Engineering. <br />
-								I have worked as an Undergraduate Research Assistant in the field of Quantum Physics <br /> at Ned University of Engineering and Technology.
+								I have worked as a Summer Research Intern in the field of Cyber Security <br /> at ETH Zürich.
 							    </p>
 								<br />
 								<br />
@@ -212,8 +212,21 @@
 
 
 						<section class="spotlight">
-							<div class="image"><img src="images/ned.jpg" alt="ned logo" /></div><div class="content">
-								<h2><a href="https://www.neduet.edu.pk/">undergraduate Research Assistant</a></h2>
+							<div class="image"><img src="images/IBM.jpg" alt="IBM logo" /></div><div class="content">
+								<h2><a href="https://www.neduet.edu.pk/">International Business Machines (IBM)</a></h2>
+								<p>I have also worked as a part-time Undergraduate Research Assistant at NED University of Engineering and Technology under the supervision of Professor Muhammad Shoaib. The topic of our research was how different atmospheric conditions have an affect on Quantum Protocls. During the research, different scenarios were implemented for discussing the 
+									applicability of our models under different weather conditions, with different propagation distances 
+									and directions. The obtained results were important for the design of optical experiments including post 
+									selection and adaptive strategies and for the security analysis of quantum communication protocols 
+									in free-space.</p>
+							</div>
+						</section>
+
+
+
+						<section class="spotlight">
+							<div class="image"><img src="images/ETH.png" alt="ETH logo" /></div><div class="content">
+								<h2><a href="https://www.neduet.edu.pk/">ETH Zürich</a></h2>
 								<p>I have also worked as a part-time Undergraduate Research Assistant at NED University of Engineering and Technology under the supervision of Professor Muhammad Shoaib. The topic of our research was how different atmospheric conditions have an affect on Quantum Protocls. During the research, different scenarios were implemented for discussing the 
 									applicability of our models under different weather conditions, with different propagation distances 
 									and directions. The obtained results were important for the design of optical experiments including post 
