--- a/index.html
+++ b/index.html
@@ -214,10 +214,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/IBM.jpg" alt="IBM logo" /></div><div class="content">
 								<h2><a href="https://www.neduet.edu.pk/">International Business Machines (IBM)</a></h2>
-								<p>I have also worked as a part-time Undergraduate Research Assistant at NED University of Engineering and Technology under the supervision of Professor Muhammad Shoaib. The topic of our research was how different atmospheric conditions have an affect on Quantum Protocls. During the research, different scenarios were implemented for discussing the 
-									applicability of our models under different weather conditions, with different propagation distances 
-									and directions. The obtained results were important for the design of optical experiments including post 
-									selection and adaptive strategies and for the security analysis of quantum communication protocols 
+								<p> 
 									in free-space.</p>
 							</div>
 						</section>
@@ -226,12 +223,12 @@
 
 						<section class="spotlight">
 							<div class="image"><img src="images/ETH.png" alt="ETH logo" /></div><div class="content">
-								<h2><a href="https://www.neduet.edu.pk/">ETH Zürich</a></h2>
-								<p>I have also worked as a part-time Undergraduate Research Assistant at NED University of Engineering and Technology under the supervision of Professor Muhammad Shoaib. The topic of our research was how different atmospheric conditions have an affect on Quantum Protocls. During the research, different scenarios were implemented for discussing the 
-									applicability of our models under different weather conditions, with different propagation distances 
-									and directions. The obtained results were important for the design of optical experiments including post 
-									selection and adaptive strategies and for the security analysis of quantum communication protocols 
-									in free-space.</p>
+								<h2><a href="https://inf.ethz.ch/studies/summer-research-fellowship.html">ETH Zürich</a></h2>
+								<p>I was awarded a Student Summer Research Fellowship (SSRF) at ETH Zürich.
+									The topic of my research project was the implementation of The Protection of Critical Inter-Domain Communications through Flyover Reservations in the Network Security 
+									Laboratory of ETH Zürich.
+									 
+									</p>
 							</div>
 						</section>
 
