--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/IBM.jpg" alt="IBM logo" /></div><div class="content">
 								<h2><a href="https://www.neduet.edu.pk/">International Business Machines (IBM)</a></h2>
-								<p> 
+								<p>I worked as Security Engineer Intern at IBM Budapest Lab 
 									in free-space.</p>
 							</div>
 						</section>
