--- a/index.html
+++ b/index.html
@@ -214,8 +214,12 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/IBM.jpg" alt="IBM logo" /></div><div class="content">
 								<h2><a href="https://www.neduet.edu.pk/">International Business Machines (IBM)</a></h2>
-								<p>I worked as Security Engineer Intern at IBM Budapest Lab 
-									in free-space.</p>
+								<p>As a Security Engineer Intern at IBM Watson Media, I was part of the Security team
+									where we were building a modern, cloud-based security infrastructure processses.
+									My job was to share and strengthen the very foundation of information security in the orgranization:
+									developing detective and preventive controls, investigating security events and breaches, establishing
+									best practices and distributing security mindset and knowledge. 
+									</p>
 							</div>
 						</section>
 
