--- a/index.html
+++ b/index.html
@@ -240,7 +240,10 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/exxon.png" alt="exxon logo" /></div><div class="content">
 								<h3><a href="https://corporate.exxonmobil.com/">EXXONMOBIL</a></h3>
-								<p>I have done my Internship as a Network Analyst at ExxonMobil which is one of the biggest oil companies of Europe. With six months of experience as a Network Analyst, I have managed and executed company’s network under professional supervision. Not only that, but I have also troubleshot and maintained variety of network related issues and equipment’s. I have also Provided assistance in troubleshooting networking issues and network device hardware failure.</p>
+								<p>I have done my Internship as a Network Analyst at ExxonMobil which is one of the biggest oil companies of Europe. 
+									With six months of experience as a Network Analyst, I have managed and executed company’s network under professional supervision. 
+									Not only that, but I have also troubleshot and maintained variety of network related issues and equipment’s. 
+									I have also Provided assistance in troubleshooting networking issues and network device hardware failure.</p>
 
 
 							</div>
