--- a/index.html
+++ b/index.html
@@ -301,9 +301,17 @@
 
 									</p>
 								</li>
-								<li class="icon solid fa-laptop">
-									<h3>Machine Learning (ML)</h3>
-									<p>Machine learning is growing in importance due to increasingly enormous volumes and variety of data, the access and affordability of computational power, and the availability of high speed Internet.With greater access to data and computation power, machine learning is becoming more ubiquitous every day and will soon be integrated into many facets of human life. Currently, I am working on project that tries to predict the overall worldwide box office revenue of movies using data such as the movie cast, crew, posters, plot keywords, budget, production companies, release dates, languages, and countries.</p>
+								<li class="icon solid fa-cubes">
+									<h3>LEGO</h3>
+									<p>My sister and I used to play with them when we were kids. 
+										I still play with them with my little cousins. I help them sketch and assemble their ideas. 
+										We work on the project every Sunday at my parents' house.
+										They're fun to experiment and build with even as an adult. 
+										You play 'sculptor' or 'architect' for a few hours as a way to bond and be creative with your family.
+										I go to the Lego store about twice per year. I’m on their mailing list. 
+										Whenever I’m at a store that sells Legos, I take a look to see if anything new is out. 
+										Lego is a wonderful medium for being creative.
+										</p>
 								</li>
 
 								<li class="icon solid fa-code">
