--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
 						<section class="spotlight">
 							<div class="image"><img src="images/IBM.jpg" alt="IBM logo" /></div><div class="content">
-								<h2><a href="https://www.neduet.edu.pk/">International Business Machines (IBM)</a></h2>
+								<h2><a href="https://video.ibm.com/our-company/career/budapest">International Business Machines (IBM)</a></h2>
 								<p>As a Security Engineer Intern at IBM Watson Media, I was part of the Security team
 									where we were building a modern, cloud-based security infrastructure processses.
 									My job was to share and strengthen the very foundation of information security in the orgranization:
@@ -229,7 +229,7 @@
 							<div class="image"><img src="images/ETH.png" alt="ETH logo" /></div><div class="content">
 								<h2><a href="https://inf.ethz.ch/studies/summer-research-fellowship.html">ETH Zürich</a></h2>
 								<p>I was awarded a Student Summer Research Fellowship (SSRF) at ETH Zürich.
-									The topic of my research project was the implementation of The Protection of Critical Inter-Domain Communications through Flyover Reservations in the Network Security 
+									The topic of my research project was the implementation of the protection of critical inter-domain communications through Flyover Reservations in the Network Security 
 									Laboratory of ETH Zürich.
 									 
 									</p>
@@ -243,7 +243,7 @@
 								<p>I have done my Internship as a Network Analyst at ExxonMobil which is one of the biggest oil companies of Europe. 
 									With six months of experience as a Network Analyst, I have managed and executed company’s network under professional supervision. 
 									Not only that, but I have also troubleshot and maintained variety of network related issues and equipment’s. 
-									I have also Provided assistance in troubleshooting networking issues and network device hardware failure.</p>
+									I also Provided assistance in troubleshooting networking issues and network device hardware failure.</p>
 
 
 							</div>
@@ -253,7 +253,9 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/bme.jpg" alt="bme logo" /></div><div class="content">
 								<h3><a href="https://www.bme.hu/">Budapest University of Technology and Economics (BME)</a></h3>
-													<p>In my previous semesters, I have also worked as a Physics and Databases Labpratory instructor for undergraduate science majors.I also helped in reviewing, refining and modifying course plans, lesson plans and syllabus as necessary to meet student learning outcomes along with other professors.  I also assisted Quantum physics and programming (Scratch IDE) projects to encourage multidisciplinary thinking and introduce problem solving approaches common in STEM disciplines.
+													<p>In my previous semesters, I have also worked as a Physics and Databases Labpratory instructor for undergraduate science majors.
+														I also helped in reviewing, refining and modifying course plans, lesson plans and syllabus as necessary to meet student learning outcomes along with other professors. 
+														I also assisted programming (Scratch IDE) projects to encourage multidisciplinary thinking and introduce problem solving approaches common in STEM disciplines.
 													</p>
 								</div>
 							</section>
@@ -262,17 +264,20 @@
 							<section class="spotlight">
 								<div class="image"><img src="images/hook.jpg" alt="hook logo" /></div><div class="content">
 									<h3><a href="https://shmentor.hu/">HÖOK Stipendium Hungaricum Mentor Program</a></h3>
-														<p>I have also worked as a Student Mentor at HÖOK. The program's aim was to assist the higher educational integration of freshman students that were coming to Hungary with the Stipendium Hungaricum scholarship by providing mentor pairs to them. As a Mentor, my responsibility was to assist in my mentees' administrative and educational tasks and to help them in getting used to Hungarian transportation, culture, and norms.</p>
+														<p>I have also worked as a Student Mentor at HÖOK. 
+															The program's aim was to assist the higher educational integration of freshman students that were coming to Hungary with the Stipendium Hungaricum scholarship by providing mentor pairs to them.
+															 As a Mentor, my responsibility was to assist my mentees' in administrative and educational tasks and to help them in getting used to Hungarian transportation, culture, and norms.</p>
 									</div>
 								</section>
 
 								<section class="spotlight">
 									<div class="image"><img src="images/acm.png" alt="acm logo" /></div><div class="content">
 										<h3><a >Association for Computing Machinery (ACM)</a></h3>
-															<p>I have also worked with ACM as a Student Ambassador. While working there, we Partnered with 100+ professionals and recruiters in various firms and organizations, bringing out 10+ companies
+															<p>I have also worked with ACM as a Student Ambassador. While working there, we partnered with 100+ professionals 
+																and recruiters in various firms and organizations, bringing out 10+ companies
 																for our Professional Networking Dinner with 150+ attendees.
-																I also Supported my mates with a challenging workload by offering to take on some of their tasks.
-																By being a member of this organization, I seized opportunities to make progress and improve process  </p>
+																I also supported my mates with a challenging workload by offering to take on some of their tasks.
+																By being a member of this organization, I seized opportunities to make progress and improve process.  </p>
 										</div>
 									</section>
 					                </section>
@@ -316,7 +321,7 @@
 
 								<li class="icon solid fa-code">
 									<h3>Programming</h3>
-									<p>Programming is a skill that I always wanted to have but was too intimidated to start working on. However, that all changed last year and now that I have finally got started - programming is a skill that I am developing in my free time. I primarily use YouTube and the plethora of online resources available to learn and practice. My go-to IDE of choice is Visual Studio, however I am trying to be a Vim master. Also, spaces &gt tabs.</p>
+									<p>Programming is a skill that I always wanted to have but was too intimidated to start working on. However, that all changed when I started High School and now that I have finally got started - programming is a skill that I am developing in my free time. I primarily use YouTube and the plethora of online resources available to learn and practice. My go-to IDE of choice is Visual Studio, however I am trying to be a Vim master. Also, spaces &gt tabs.</p>
 								</li>
 
 								<li class="icon solid fa-infinity">
