--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/IBM.jpg" alt="IBM logo" /></div><div class="content">
 								<h2><a href="https://video.ibm.com/our-company/career/budapest">International Business Machines (IBM)</a></h2>
-								<p>As a Security Engineer Intern at IBM Watson Media, I was part of the Security team
+								<p>As a Security Engineer Intern at IBM Watson Media, I was part of the Security Team
 									where we were building a modern, cloud-based security infrastructure processses.
 									My job was to share and strengthen the very foundation of information security in the orgranization:
 									developing detective and preventive controls, investigating security events and breaches, establishing
@@ -321,45 +321,85 @@
 
 								<li class="icon solid fa-code">
 									<h3>Programming</h3>
-									<p>Programming is a skill that I always wanted to have but was too intimidated to start working on. However, that all changed when I started High School and now that I have finally got started - programming is a skill that I am developing in my free time. I primarily use YouTube and the plethora of online resources available to learn and practice. My go-to IDE of choice is Visual Studio, however I am trying to be a Vim master. Also, spaces &gt tabs.</p>
+									<p>Programming is a skill that I always wanted to have 
+										but was too intimidated to start working on. 
+										However, that all changed when I started High School and 
+										that I finally got started - programming is a skill that I am developing every time.
+										I primarily use YouTube and the plethora of online resources available to learn and practice.
+										My go-to IDE of choice is Visual Studio, however I am trying to be a Vim master. 
+										Also, spaces &gt tabs.</p>
 								</li>
 
 								<li class="icon solid fa-infinity">
-									<h3>Mathematics and Mathematicians</h3>
-									<p>As evident by my life choices, math truly is one of my biggest passions. It is the purest way of viewing the world, and it is this very lens that I am trying to polish to get a better understanding of reality. In my free time, I love watching 3Blue1Brown videos, working on sample math problems, and learning about great Mathematicians of the past. Being an aspiring mathematician, I am very inspired by the work of Emmy Noether and talk about her to my friends/family on every occasion that I get.</p>
+									<h3>Computer and Network Security</h3>
+									<p>As evident by my life choices, 
+										Cyber Security truly is one of my biggest passions. 
+										It is this very lens that I am trying to polish to get a better understanding of reality. 
+										In my free time, I love watching Numberphile videos, working on sample problems, 
+										and learning about great Scientists of the past. Being an aspiring Computer Scientist, 
+										I am very inspired by the work of Ada Lovelace 
+										and talk about her to my friends/family on every occasion that I get.</p>
 								</li>
 
 								<li class="icon solid fa-palette">
 									<h3>Arts and Artifacts</h3>
-									<p>Art has always been an integral part of my life. My father is an artist and an art teacher so I was raised to see the world through a creative lens. I grew up in awe with the works of M. C. Escher, Gustav Klimt, and Caravaggio. As I got older, I realized my affinity to the sciences but my love for the arts didn’t dwindle. Instead, now, I see Mathematics and Art as one in the same. Math, I would say, is just my favorite type of art.</p>
+									<p>Art has always been an integral part of my life. I was raised to see the world through a creative lens.
+										I grew up in awe with the works of M. C. Escher, Gustav Klimt, and Caravaggio. 
+										As I got older, I realized my affinity to the sciences but my love for the arts didn’t dwindle.
+										Instead, now, I see Programming and Art as one in the same. Coding, I would say, is just my favorite type of art.</p>
 								</li>
 
 								<li class="icon solid fa-bullseye">
 									<h3>Outreach</h3>
-									<p>I truly believe it is up to us to inspire and encourage scientific curiosity within the community. I love chatting to anyone about ideas and the wonders of science. When we aren’t in a global pandemic I love attending conferences and volunteering at community events to help people see why Math and Physics are so important, interesting and, best of all, fun!</p>
+									<p>I truly believe it is up to us to inspire and encourage scientific 
+										curiosity within the community. 
+										I love chatting to anyone about ideas and the wonders of science. 
+										When we aren’t in a global pandemic I love attending conferences and volunteering at 
+										community events to help people see why Computer Scinece skills are so important, 
+										interesting and, best of all, fun!</p>
 								</li>
 
 								
 								<li class="icon solid fa-paper-plane">
 									<h3>Food and Travelling</h3>
-									<p>Some of the most rewarding experiences I have had in life have come through the opportunity to travel. I feel incredibly grateful that I have had the opportunity to explore countries like Italy, Spain, Belgium, Portugal, and Sweden. Though it isn’t as common anymore, Pinterest is great for feeding my daydreams to explore the world and all it has to offer.
+									<p>Some of the most rewarding experiences I have had in life 
+										have come through the opportunity to travel. 
+										I feel incredibly grateful that 
+										I have had the opportunity to explore countries like Italy, Spain, Belgium, Portugal, Sweden and, Switzerland. 
+										Though it isn’t as common anymore, Pinterest is great for feeding my daydreams to 
+										explore the world and all it has to offer.
 									</p>
 								</li>
 
 								<li class="icon solid fa-icons">
 									<h3>Social Dynamics</h3>
-									<p>I love to understand and analyze social situations. I find the rich interactions between humans absolutely amazing - starting from their body language to their use of language. Looking at social situations as information channels has allowed me to better understand my friends and family and also develop a higher EQ. It is a hobby that has paid its divident as I am always the person to diffuse conflicts in a friend group whenever it arises.</p>
+									<p>I love to understand and analyze social situations. 
+									   I find the rich interactions between humans absolutely amazing - starting from their body
+									    language to their use of language. Looking at social situations as information channels has 
+										allowed me to better understand my friends and family and also develop a higher EQ. 
+										It is a hobby that has paid its divident as I am always the person to diffuse conflicts in a 
+										friend group whenever it arises.</p>
 
 								</li>
 
 								<li class="icon solid fa-graduation-cap">
 									<h3>Teaching</h3>
-									<p>I was always passionate about learning which transcended more and more into teaching as I grew up. My experiences in teaching Math to 7th graders when I was in high school, STEM and college readiness classes to middle and high schoolers last summer, and more recently being a peer tutor to students with learning disabilities in college serve as constant reminders as how fulfilling teaching is for me.</p>
+									<p>I was always passionate about learning which transcended 
+										more and more into teaching as I grew up. 
+										My experiences in teaching Math to 7th graders when I was in high school, STEM and college readiness 
+										classes to middle and high schoolers last summer, 
+										and more recently being a peer tutor to students with 
+										learning disabilities in college serve as constant reminders as how fulfilling teaching is for me.</p>
 								</li>
 
 								<li class="icon solid fa-glasses">
 									<h3>Reading</h3>
-									<p>Sadly I can't say that I am able to read as much as I want to, however, every now and then I pick up a book and finish it in a weekend. My favorite book often changes, as there is a different book for every occasion, but if I had to choose something I would choose What if? by Randall Munroe. Currently I am enjoying The Three-Body Problem by Cixin Lui. If you happen to have any suggestions I’d be happy to hear them!</p>
+									<p>Sadly I can't say that I am able to read as much as I want to, 
+										however, every now and then I pick up a book and finish it in a weekend. 
+										My favorite book often changes, as there is a different book for every occasion, 
+										but if I had to choose something I would choose What if? by Randall Munroe. 
+										Currently I am enjoying The Three-Body Problem by Cixin Lui. 
+										If you happen to have any suggestions I’d be happy to hear them!</p>
 								</li>
 
 
