Feat(Files)-Added PDF

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 								<h2><a href="https://inf.ethz.ch/studies/summer-research-fellowship.html">ETH Zürich</a></h2>
 								<p>I was awarded a Student Summer Research Fellowship (SSRF) at ETH Zürich.
 									The topic of my research project was the implementation of the protection of critical inter-domain communications through Flyover Reservations in the Network Security 
-									Laboratory of ETH Zürich.
+									Laboratory of ETH Zürich. Here is the <a href="files/confirmation.pdf"> <mark>link</mark> for the confirmation certificate.</a>
 									 
 									</p>
 							</div>
