--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								
 								
 									<p>
-										As a Computer Science Engineering , my journey weaves <br /> a tapestry of learning, growth, and discovery.<br />  
+										As a Computer Science Engineer , my journey weaves <br /> a tapestry of learning, growth, and discovery.<br />  
 										Dive into the captivating world of Network Security, <br /> where I've contributed as a Summer Research Intern at ETH Zürich.<br />  
 										Join me on an exploration of cutting-edge technology and knowledge. <br /> 
 										Welcome to my digital hub, where curiosity knows no bounds!
@@ -346,10 +346,13 @@
 
 								<li class="icon solid fa-infinity">
 									<h3>Security</h3>
-									<p> Nework Security is a compelling passion of mine, refined for a profound understanding of reality. 
-										In leisure, I engage with Numberphile videos, solve problems, and explore achievements of past scientists. 
-										As an aspiring Computer Scientist, Ada Lovelace's legacy inspires me, while curiosity fuels broad knowledge and innovative exploration in computer science.
-										This all-encompassing curiosity fuels not only my zeal for Security but also my pursuit of knowledge and innovation in the vast realm of computer science.</p>
+									<p> In the world of computers and the internet, I'm like a digital superhero, 
+										but instead of a cape, I wear the armor of network security. Imagine it as the
+										 invisible shield that keeps your online life safe and sound. I got hooked on 
+										 this stuff because it's like being a high-tech detective, always on the lookout 
+										 for sneaky hackers trying to mess with our digital world. I love the challenge of 
+										 figuring out how to lock the virtual doors and windows so that our information stays private and our online playground
+										 stays fun. It's like being a guardian of the internet, and I'm on a mission to make sure the bad guys don't stand a chance!</p>
 								</li>
 
 								<li class="icon solid fa-palette">
