--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								
 									<p>
 										As a Computer Science Engineer , my journey weaves <br /> a tapestry of learning, growth, and discovery.<br />  
-										Dive into the captivating world of Network Security, <br /> where I've contributed as a Summer Research Intern at ETH Zürich.<br />  
+										Dive into the captivating world of Security. <br />
 										Join me on an exploration of cutting-edge technology and knowledge. <br /> 
 										Welcome to my digital hub, where curiosity knows no bounds!
 
