--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Areeba T. Shoaib</h2>
-							<p> Synergizing Security, Embracing Networks, Tech Appreciator  <br />
+							<p> Synergizing Security, Tech Appreciator  <br />
 							
 								A CURIOUS GIRL <br />
 								A WANDERER
@@ -313,7 +313,8 @@
 
 											<h3>&#x2022; Student Summer Research Fellowship at Eidgenössische Technische Hochschule Zürich (ETH Zürich)</h3>
 											<P>
-											Being selected as one of only 19 distinguished Summer Research Fellowship students from a competitive pool of over 2404 applicants at ETH Zürich was a defining moment in my academic journey. This exclusive opportunity allowed me to contribute to cutting-edge research, immersing myself in a dynamic environment that fostered both personal and intellectual growth.
+											Being selected as one of only 19 distinguished Summer Research Fellowship students from a competitive pool of over 2404 applicants 
+											at ETH Zürich was a defining moment in my academic journey. This exclusive opportunity allowed me to contribute to cutting-edge research, immersing myself in a dynamic environment that fostered both personal and intellectual growth.
 											Here's the proof: <a href="files/confirmation.pdf"> <mark>proof</mark></a></P>
 
 
@@ -408,7 +409,7 @@
 								<li class="icon solid fa-infinity">
 									<h3>Security</h3>
 									<p> In the world of computers and the internet, I'm like a digital superhero, 
-										but instead of a cape, I wear the armor of network security. Imagine it as the
+										but instead of a cape, I wear the armor of security. Imagine it as the
 										 invisible shield that keeps your online life safe and sound. I got hooked on 
 										 this stuff because it's like being a high-tech detective, always on the lookout 
 										 for sneaky hackers trying to mess with our digital world. I love the challenge of 
