--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<h2>Areeba T. Shoaib</h2>
 							<p> Synergizing Security, Tech Appreciator  <br />
 							
-								A CURIOUS GIRL <br />
+								A CURIOUS GIRi <br />
 								A WANDERER
 							</p>
 							
